<resources>
    <string name="nom_user">Escriba el nombre del Usuario</string>
    <string name="desc_nom_user">Describe el noimbre del usuario</string>
    <string name="ubic_user">Ubicacion del Usuario</string>
    <string name="des_lug_user">Describe el lugar de origen del usuario</string>
    <string name="conf_bas">Configuracion Basica</string>
    <string name="conf_sec">Configuracion secuendaria</string>
    <string name="btn_regresar">Guardar</string>
    <string name="guardar">Guardar</string>
    <string name="regresar">Regresar a la principal</string>
    <string name="select_idiom">Selecciona tu idioma</string>
    <string name="cam_idiom">Cambia el idioma de la App</string>
    <string name="datos_developer"></string>
    <string name="contacto_developer">\n\nContacto: hectorj27.hpa@gmail.com\n(044)4151258892</string>
    <string name="titulo_form">Formulario Usuario\n</string>
    <string name="edt_usuario">Usuario</string>
    <string name="edt_pass">Password</string>
    <string name="edt_mail">E-mail</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_listar">Listar</string>
    <string name="clic_imagen_cont">Clic en la imagen para continuar\n</string>
    <string name="developer">PastorApps</string>
    <string name="gest_user">Gestion de Usuarios</string>
    <string name="cont_uno_intro">El lenguaje Python fue diseñado a ﬁnales de la década de los ochenta por Guido van Rossum. Se trata de un lenguaje de programación de muy alto nivel, con una sintaxis muy clara y una apuesta ﬁrme por la legibilidad del código. Sin duda es un lenguaje de programación muy versátil, fuertemente tipado, imperativo y orientado a objetos, aunque contiene también características que lo convierten en un lenguaje de paradigma funcional.</string>
    <string name="prg_uno">Nombre del creador de Python</string>
    <string name="txv_ayuda">Audio Interactivo</string>
    <string name="btn_calificar">Calificar</string>
    <string name="titulo_ingresa_sistem">Ingresa al Sistema\n</string>
    <string name="btn_ingresa">Ingresar</string>
    <string name="btn_registrate">Registrate</string>
    <string name="btn_intro_tem">Introduccion</string>
    <string name="welcome">Bienvenido</string>
    <string name="app_name">Python</string>
    <string name="title_ruby">iText</string>
    <string name="form_btn_mas_tarde">Mas Tarde</string>
    <string name="form_btn_ingresar">Ingresar</string>
    <string name="form_btn_crear_cuenta">Crear Cuenta</string>
    <string name="login_valido">Daniel</string>
    <string name="clave_valida">1234</string>
    <string name="error_autenticar">usuario o password incorrectos</string>
    <string name="datos_guardados_correctamente">"Los datos se guardaron con exito "</string>
    <string name="btn_create_guardar">Guardar</string>
    <string name="btn_create_cancelar">Cancelar</string>
    <string name="title_login">Login</string>
    <string name="title_create_login_registro">Registro</string>
    <string name="usuario_create_login_registro">Usuario</string>
    <string name="pass_create_login_registro">Contraseña</string>
    <string name="correo_create_login_registro">Correo</string>
    <string name="modules">Módulos</string>
    <string name="tab_informacon">Información</string>
    <string name="tab_video">Vídeo</string>
    <string name="tab_examen">Examen</string>
    <string name="escoge_medio_preferencia">Escoge el medio de preferencia :</string>
    <string name="mensaje_bien_venido">Bienvenido :</string>
    <string name="mensaje_ocultar">Ocultar</string>
    <string name="mensaje_ocultar_toast">Ocultado</string>
    <string name="tiulo_progreso_menu_bar">Progreso</string>
    <string name="ayuda_sugerencia_ayuda">Ayuda</string>
    <string name="ayuda_sugerencia_recomendaciones">Recomendaciónes</string>
    <string name="ayuda_sugerencia_recomendaciones_resp">
        -Para un mejor uso de esta app se suguiere estar conectado a una red wifi.\n
        -No conectarse por medio de datos ya que los cargos generados pueden ser grandes.</string>
    <string name="ayuda_sugerencia_sugerencias">Sugerencias</string>
    <string name="ayuda_sugerencia_sugerencias_para">Para :</string>
    <string name="ayuda_sugerencia_sugerencias_correo">hectorj27.hpa@gmail.com</string>
    <string name="ayuda_sugerencia_sugerencias_tema">Tema :</string>
    <string name="ayuda_sugerencia_sugerencias_mensage">Mensage :</string>
    <string name="ayuda_sugerencia_sugerencias_enviar">Enviar</string>
    <string name="acerca_de_titulo_desarrollador">Desarrollador</string>
    <string name="acerca_de_nom_des">Nombre:</string>
    <string name="acerca_de_nom_des_rep">Hector Jesus Pastor Alvarado</string>
    <string name="acerca_de_corr_des">Correo:</string>
    <string name="acerca_de_corr_des_rep">hectorj27.hpa@gmail.com</string>
    <string name="acerca_de_titulo_asignatura">Asignatura</string>
    <string name="acerca_de_nom_asig">Nombre:</string>
    <string name="acerca_de_nom_asig_res">Desarrollo de aplicaciónes III.</string>
    <string name="acerca_de_prof_asig">Profesor:</string>
    <string name="acerca_de_prof_asig_res">Rodriguez Garcia Anastacio.</string>
    <string name="acerca_de_titulo_universidad">Universidad</string>
    <string name="acerca_de_nombre_uni">Nombre:</string>
    <string name="acerca_de_nombre_uni_res">Universidad Tecnológica del Norte de Guanajuato.</string>
    <string name="acerca_de_ubicacion_uni">Ubicación:</string>
    <string name="acerca_de_ubicacion_uni_res">Dolores Hidalgo,Campus Central.</string>
    <string name="titulo_calificacion">Calificación</string>
    <string name="calificacion_enviar">Enviar</string>
    <string name="calificacion_resultado">Resultado :</string>
    <string name="titulo_configuracion">Configuraciónes</string>
    <string name="configuracion_titulo_notificaciones">Notificaciónes</string>
    <string name="configuracion_activar_notificaciones">Activar</string>
    <string name="configuracion_desactivar_notificaciones">Desactivar</string>
    <string name="configuracion_titulo_audio">Audio</string>
    <string name="configuracion_titulo_almacenamiento">Almacenamiento</string>
    <string name="configuracion_interno_almacenamiento">Interno</string>
    <string name="configuracion_externo_almacenamiento">Externo</string>
    <string name="nota_tipo_almacenamiento">Nota: El almacenamiento solo se puede eleguir al momento de crear la cuenta</string>
    <string name="usuario_informacion_titulo">Información</string>
    <string name="usuario_informacion_nombre">Nomre: </string>
    <string name="usuario_informacion_nombre_res">Angel Daniel Licea Ruiz</string>
    <string name="usuario_informacion_correo">Correo: </string>
    <string name="usuario_informacion_correo_res">adaniel95lira@gmail.com</string>
    <string name="usuario_informacion_puntos">Puntos: </string>
    <string name="usuario_informacion_puntos_res">123 pt</string>
    <string name="menu_bar_progreso_on">Progreso</string>
    <string name="menu_bar_usuario_on">Información del usuario</string>
    <string name="menu_bar_grafica_on">Gráfica de aprovechamiento</string>
    <string name="menu_bar_configuracion_on">Configuraciónes</string>
    <string name="menu_bar_calificar_app_on">Calificar app</string>
    <string name="menu_bar_acerca_de_on">Acerca de</string>
    <string name="menu_bar_ayuda_sugerencia_on">Ayuda y sugerencias</string>
    <string name="menu_bar_salir_on">Salir</string>
    <string name="menu_bar_juego">Pagina Dinamica</string>
    <string name="menu_bar_juego_memo">Juego</string>
    <string name="menu_bar_acerca_de_off">Acerca de</string>
    <string name="menu_bar_ayuda_sugerencia_off">Ayuda y sugerencias</string>
    <string name="menu_bar_salir_off">Salir</string>
    <string name="confirm_pass_create_login_registro">Confirma la contraseña</string>
    <string name="title_menssage_error_uno">Atención!!</string>
    <string name="title_menssage_error_dos">Atención, campos requeridos!!</string>
    <string name="button_menssage_error">Aceptar</string>
    <string name="menssage_error_pass_different">Las contraseñas no coinsiden</string>
    <string name="cuestionario_comprobar">Comprobar</string>
    <string name="calificaciones_examenes">Calificaciónes de los examenes</string>
    <string name="html_tema_concluido_off">
        <![CDATA[
            <div>
              <div>
                 <p>
                  <font color="#000000">
                     has concluido con exito el tema 1 :<i> Sobre Pythoon</i>.
                  </font>
                 </p>
              </div>
           </div>
        ]]>
    </string>
     <string name="html_curso_concluido_parte_uno">
        <![CDATA[
                     Has concluido con exito el curso de <i>Python</i> <b>
        ]]>
    </string>
    <string name="html_curso_concluido_parte_dos">
        <![CDATA[
                     </b>Has concluido con exito el curso<br />
        ]]>
    </string>
    <string name="html_uno_sobre_ruby">
        <![CDATA[
            <div>
              <div>
                 <p>
                  Python es un lenguaje de programación interpretado cuya filosofía hace hincapié en una sintaxis que favorezca un código legible.

Se trata de un lenguaje de programación multiparadigma, ya que soporta orientación a objetos, programación imperativa y, en menor medida, programación funcional. Es un lenguaje interpretado, usa tipado dinámico y es multiplataforma.

Es administrado por la Python Software Foundation. Posee una licencia de código abierto, denominada Python Software Foundation License,1 que es compatible con la Licencia pública general de GNU a partir de la versión 2.1.1, e incompatible en ciertas versiones anteriores.

                 </p>
                 <p>
                 <b></b>
                 </p>
              </div>
           </div>
        ]]>
    </string>
    <string name="html_uno_medio_ambiente_configuracion">
        <![CDATA[
            <div>
              <div>
                <p>
Python es un lenguaje de programación multiparadigma. Esto significa que más que forzar a los programadores a adoptar un estilo particular de programación, permite varios estilos: programación orientada a objetos, programación imperativa y programación funcional. Otros paradigmas están soportados mediante el uso de extensiones.

Python usa tipado dinámico y conteo de referencias para la administración de memoria.

Una característica importante de Python es la resolución dinámica de nombres; es decir, lo que enlaza un método y un nombre de variable durante la ejecución del programa (también llamado enlace dinámico de métodos).

Otro objetivo del diseño del lenguaje es la facilidad de extensión. Se pueden escribir nuevos módulos fácilmente en C o C++. Python puede incluirse en aplicaciones que necesitan una interfaz programable.

Aunque la programación en Python podría considerarse en algunas situaciones hostil a la programación funcional tradicional del Lisp, existen bastantes analogías entre Python y los lenguajes minimalistas de la familia Lisp como puede ser Scheme.                </p>


              </div>
           </div>
        ]]>
    </string>
    <string name="html_uno_sintaxis">
        <![CDATA[
            <div>
              <div>
                <p>
                    Ingresa a la Siguiente Direccion para conocer la Documentacion de Python
                 </p>
                 https://docs.python.org/2.7/
              </div>
           </div>
        ]]>
    </string>
    <string name="Anterior">Anterior</string>
    <string name="Siguiente">Siguiente</string>
    <string name="img1">Texto foto 1</string>
</resources>