<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/logo_python"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="44dp"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:src="@drawable/image1" />


</LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#81b2de"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_marginLeft="30dp"
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Anterior"
            android:src="@android:drawable/ic_media_previous"
            android:background="#81b2de"
            >
        </ImageButton>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img1"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:textColor="#000000"

            />


        <ImageButton
            android:background="#81b2de"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Siguiente"
            android:src="@android:drawable/ic_media_next"
            >
        </ImageButton>

    </LinearLayout>

</LinearLayout>